--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Eng. Mohammed Ali | Electrical Automation Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eng. Mohammed Ali Abdallah Ahmed | Automation Engineer</title>
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<!-- Tech Background -->
-<div class="tech-bg">
+<!-- Animated Background -->
+<div class="background">
   <div class="grid"></div>
-  <div class="nodes"></div>
+  <div class="glow glow-1"></div>
+  <div class="glow glow-2"></div>
 </div>
 
-<!-- NAVBAR -->
+<!-- Navbar -->
 <nav class="navbar">
-  <div class="container nav-wrap">
+  <div class="nav-container">
     <div class="logo">M. Ali</div>
     <ul class="nav-links">
       <li><a href="#home" class="active">Home</a></li>
@@ -29,132 +30,181 @@
       <li><a href="#experience">Experience</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="cv.pdf" class="btn-nav" target="_blank">Download CV</a></li>
+      <li><a href="cv.pdf" class="btn primary" target="_blank">Download CV</a></li>
     </ul>
     <div class="hamburger"><span></span><span></span><span></span></div>
   </div>
 </nav>
 
-<!-- HERO -->
+<!-- Hero -->
 <section id="home" class="hero">
-  <div class="container hero-grid glass">
+  <div class="hero-content glass">
     <div class="hero-text">
       <h1>Eng. Mohammed Ali<br><span>Abdallah Ahmed</span></h1>
       <h2>Electrical Automation Engineer</h2>
-      <p class="tagline">BMS | HVAC | Smart Buildings | Solar PV Systems</p>
+      <p class="tagline">Specializing in BMS | HVAC | Smart Buildings | Solar PV Systems</p>
 
       <div class="contact-info">
-        <p><i class="fas fa-map-marker-alt"></i> Olaya, Khobar, Saudi Arabia</p>
+        <p><i class="fas fa-map-marker-alt"></i> Olaya, Khobar, Eastern Province, Saudi Arabia</p>
         <p><i class="fas fa-phone"></i> +966 532 586 897</p>
         <p><i class="fas fa-envelope"></i> mohammed.ali280@gmail.com</p>
         <p><i class="fab fa-linkedin"></i>
-          <a href="https://www.linkedin.com/in/mohammed-ahmed-13328219a" target="_blank">LinkedIn Profile</a>
+          <a href="https://www.linkedin.com/in/mohammed-ahmed-13328219a" target="_blank">linkedin.com/in/mohammed-ahmed-13328219a</a>
         </p>
       </div>
 
-      <div class="hero-buttons">
+      <div class="buttons">
         <a href="#contact" class="btn primary">Get in Touch</a>
         <a href="cv.pdf" target="_blank" class="btn outline">Download CV</a>
       </div>
+
+      <div class="availability">
+        <i class="fas fa-check-circle"></i> Transferable Iqama – Available for Immediate Relocation
+      </div>
     </div>
 
-    <div class="hero-photo">
-      <div class="photo-circle">
-        <i class="fas fa-user-tie"></i>
-      </div>
+    <div class="hero-image">
+      <div class="avatar"><i class="fas fa-user-tie"></i></div>
     </div>
   </div>
 </section>
 
-<!-- ABOUT -->
+<!-- About -->
 <section id="about" class="section">
-  <div class="container">
-    <div class="glass center">
-      <h3>Professional Summary</h3>
-      <p>
-        Results-driven Electrical Automation Engineer with over 4 years of specialized experience in Siemens Building
-        Automation Solutions, HVAC DDC control systems, intelligent lighting control, and solar PV energy systems.
-        Expertise in presales engineering, system design, BOQ preparation, cost estimation, and delivering compliant,
-        energy-efficient solutions for Saudi Electricity Company (SEC) and leading contractors — achieving up to 15%
-        cost reduction and 95% client satisfaction.
-      </p>
-    </div>
+  <div class="glass section-card">
+    <h3>Professional Summary</h3>
+    <p>
+      Results-driven Electrical Automation Engineer with <strong>4+ years</strong> of experience in Siemens Building Automation Solutions, HVAC DDC control systems, intelligent lighting control, and solar PV energy systems. 
+      Strong background in presales engineering, system design, BOQ preparation, estimation, and technical documentation. 
+      Proven ability to deliver optimized, compliant solutions for Saudi Electricity Company (SEC) and leading contractors, achieving up to <strong>15% cost reduction</strong> and <strong>95% client satisfaction</strong>.
+    </p>
   </div>
 </section>
 
-<!-- EXPERIENCE -->
+<!-- Experience -->
 <section id="experience" class="section">
-  <div class="container">
-    <h3 class="section-title">Professional Experience</h3>
+  <h3 class="section-title">Professional Experience</h3>
 
-    <div class="timeline">
-      <div class="glass card">
-        <span class="date">Mar 2024 – Present</span>
-        <h4>Controls Engineer – Building Automation Design & Presales</h4>
-        <p class="company">Sela-PASS (Siemens Partner) • Khobar, Saudi Arabia</p>
-        <ul>
-          <li>Designed Siemens DDC panels for SEC substation HVAC & BMS systems</li>
-          <li>Led presales: BOQs, AutoCAD layouts, proposals, cost estimation</li>
-          <li>Configured PXC/DXR, SID/HIT, IEQ sensors</li>
-          <li>Integrated KNX, BACnet, DALI-2 systems</li>
-        </ul>
-      </div>
+  <div class="timeline">
+    <div class="glass timeline-card">
+      <span class="date">Mar 2024 – Present</span>
+      <h4>Controls Engineer – Building Automation Design & Presales</h4>
+      <p class="company">Sela-PASS (Siemens Building Technologies Solution Partner) • Khobar, Saudi Arabia</p>
+      <ul>
+        <li>Designed and delivered Siemens-based DDC panels for SEC substation HVAC and BMS systems</li>
+        <li>Led presales activities: technical proposals, AutoCAD layouts, BOQs, and cost estimation</li>
+        <li>Configured PXC & DXR controllers, SID/HIT tools, and IEQ sensors to optimize energy efficiency</li>
+        <li>Integrated KNX, BACnet, and DALI-2 systems for smart lighting and building automation</li>
+        <li>Supported commissioning, performance tuning, and post-handover support — achieving 95% customer satisfaction</li>
+      </ul>
+    </div>
 
-      <div class="glass card">
-        <span class="date">Sep 2022 – Dec 2023</span>
-        <h4>Automation Engineer</h4>
-        <p class="company">DAL Group • Sudan</p>
-        <ul>
-          <li>Maintained automated production lines</li>
-          <li>PLC, HMI, MCC & instrumentation systems</li>
-          <li>Reduced downtime by 15%</li>
-        </ul>
-      </div>
+    <div class="glass timeline-card">
+      <span class="date">Aug 2023 – Dec 2023 (Part-Time)</span>
+      <h4>Solar Engineer – PV Systems</h4>
+      <p class="company">Al-Aggar Renewable Solar Solutions • Wad Madani, Sudan</p>
+      <ul>
+        <li>Designed and installed 10+ off-grid and hybrid solar PV systems powering rural homes and water stations</li>
+        <li>Improved system availability and reduced downtime by 10% through performance optimization</li>
+        <li>Prepared technical proposals, cost estimates, and IEC-compliant designs</li>
+        <li>Conducted site surveys and coordinated installations with field teams</li>
+      </ul>
+    </div>
 
-      <div class="glass card">
-        <span class="date">Aug – Dec 2023</span>
-        <h4>Solar Engineer (Part-Time)</h4>
-        <p class="company">Al-Aggar Renewable • Sudan</p>
-        <ul>
-          <li>Designed off-grid & hybrid PV systems</li>
-          <li>Prepared IEC-compliant technical proposals</li>
-        </ul>
-      </div>
+    <div class="glass timeline-card">
+      <span class="date">Sep 2022 – Dec 2023</span>
+      <h4>Automation Engineer</h4>
+      <p class="company">DAL Group – DAL Agricultural Services Company • Khartoum, Sudan</p>
+      <ul>
+        <li>Maintained Hunter Wood Technologies automated production lines, reducing downtime by 15%</li>
+        <li>Supported PLC, HMI, MCC, and instrumentation systems</li>
+        <li>Implemented predictive maintenance, sensor calibration, and root-cause analysis to improve OEE</li>
+      </ul>
+    </div>
+
+    <div class="glass timeline-card">
+      <span class="date">Apr 2022 – Aug 2022</span>
+      <h4>Product Support Engineer</h4>
+      <p class="company">Afroscot Services Co. Ltd • Khartoum, Sudan</p>
+      <ul>
+        <li>Commissioned diesel generators and hybrid solar systems for 15+ telecom sites</li>
+        <li>Rehabilitated legacy systems to 76% operational capacity</li>
+        <li>Resolved 90% of field issues within 24 hours</li>
+      </ul>
     </div>
   </div>
 </section>
 
-<!-- PROJECTS -->
+<!-- Projects -->
 <section id="projects" class="section">
-  <div class="container">
-    <h3 class="section-title">Projects</h3>
-    <div class="grid-3">
-      <div class="glass card">SEC Substations – HVAC & BMS DDC Panels</div>
-      <div class="glass card">King Faisal Specialist Hospital – BMS T&C</div>
-      <div class="glass card">Off-Grid Solar – 11+ Hybrid Systems</div>
+  <h3 class="section-title">Key Projects</h3>
+  <div class="grid-3">
+    <div class="glass card">
+      <h4>SEC Substations</h4>
+      <p>HVAC & BMS DDC Panels – Design, Manufacturing, Testing & Commissioning</p>
+    </div>
+    <div class="glass card">
+      <h4>King Faisal Specialist Hospital, Medina</h4>
+      <p>BMS System Testing & Commissioning</p>
+    </div>
+    <div class="glass card">
+      <h4>Off-Grid & Hybrid Solar Systems</h4>
+      <p>11+ installations powering rural communities and infrastructure</p>
     </div>
   </div>
 </section>
 
-<!-- SKILLS -->
+<!-- Skills -->
 <section id="skills" class="section">
-  <div class="container">
-    <h3 class="section-title">Skills</h3>
-    <div class="grid-2">
-      <div class="glass card">BMS & Automation: Siemens Desigo, PXC, DXR, KNX, BACnet, DALI-2</div>
-      <div class="glass card">HVAC & Control: DDC, MCC, VFD, IEQ Sensors</div>
-      <div class="glass card">Solar & Energy: Hybrid PV, BESS, Load Analysis</div>
-      <div class="glass card">Software: AutoCAD, MATLAB, PVSyst, Advanced Excel</div>
+  <h3 class="section-title">Technical Skills</h3>
+  <div class="skills-grid">
+    <div class="glass card">
+      <h4>BMS & Automation</h4>
+      <p>Siemens Desigo CC, PXC, DXR, SID, HIT • KNX, BACnet, DALI-2, LoRaWAN, IoT</p>
+    </div>
+    <div class="glass card">
+      <h4>HVAC & Control Systems</h4>
+      <p>DDC & MCC Panel Design • Sensors, IEQ, VFD, PID Control</p>
+    </div>
+    <div class="glass card">
+      <h4>Solar & Energy Systems</h4>
+      <p>Off-grid & Hybrid PV • Battery Energy Storage (BESS) • Testing & Load Analysis</p>
+    </div>
+    <div class="glass card">
+      <h4>Software & Tools</h4>
+      <p>AutoCAD • MATLAB/Simulink • PVSyst • Microsoft Excel (Advanced)</p>
     </div>
   </div>
 </section>
 
-<!-- CONTACT -->
-<footer id="contact" class="footer">
-  <div class="container">
-    <p>📧 mohammed.ali280@gmail.com | 📞 +966 532 586 897</p>
-    <p>© 2026 Eng. Mohammed Ali Abdallah Ahmed</p>
+<!-- Education & Certifications -->
+<section id="education" class="section">
+  <h3 class="section-title">Education & Certifications</h3>
+  <div class="glass section-card">
+    <h4>B.Sc. Electrical & Electronics Engineering</h4>
+    <p>University of Khartoum, Sudan • Graduated Oct 2020</p>
+    <p><strong>Graduation Project:</strong> Extension of Photovoltaic Power Generation – Al-Fashir Power Plant (PVSyst & MATLAB/Simulink modeling)</p>
+
+    <h4 style="margin-top: 30px;">Certifications & Training</h4>
+    <ul>
+      <li>Siemens Intelligent Smart Building Solutions (KNX, BACnet, IoT, DALI-2) – 2025</li>
+      <li>Siemens Presales Training – Desigo PXC/DXR – Jan 2025</li>
+      <li>Solar PV Design & Installation – edX (Dr. Olindo Isabella)</li>
+      <li>Advanced Industrial Automation – PLC, SCADA, VFD</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer id="contact" class="footer glass">
+  <div class="footer-content">
+    <p><strong>Languages:</strong> Arabic (Native) • English (Full Professional Proficiency)</p>
+    <p><strong>Volunteer Experience:</strong> Social Media Director & Community Organizer – Insan Khair Initiative, Sudan</p>
+    <p><strong>Interests:</strong> Swimming • Football • Arabic Calligraphy • Free-Hand Drawing</p>
+    <p style="margin-top: 20px;">© 2026 Eng. Mohammed Ali Abdallah Ahmed • All rights reserved</p>
+    <p>mohammed.ali280@gmail.com | +966 532 586 897</p>
   </div>
 </footer>
 
