--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Animated Background -->
 <div class="background">
-  <div class="grid"></div>
+  <div class="circuit-pattern"></div>
   <div class="glow glow-1"></div>
   <div class="glow glow-2"></div>
 </div>
@@ -40,7 +40,7 @@
 
 <!-- Hero -->
 <section id="home" class="hero">
-  <div class="hero-content glass">
+  <div class="hero-content neumorphic">
     <div class="hero-text">
       <h1>Eng. Mohammed Ali<br><span>Abdallah Ahmed</span></h1>
       <h2>Electrical Automation Engineer</h2>
@@ -73,7 +73,7 @@
 
 <!-- About -->
 <section id="about" class="section">
-  <div class="glass section-card">
+  <div class="neumorphic section-card">
     <h3>Professional Summary</h3>
     <p>
       Results-driven Electrical Automation Engineer with <strong>4+ years</strong> of experience in Siemens Building Automation Solutions, HVAC DDC control systems, intelligent lighting control, and solar PV energy systems. 
@@ -88,7 +88,7 @@
   <h3 class="section-title">Professional Experience</h3>
 
   <div class="timeline">
-    <div class="glass timeline-card">
+    <div class="neumorphic timeline-card">
       <span class="date">Mar 2024 – Present</span>
       <h4>Controls Engineer – Building Automation Design & Presales</h4>
       <p class="company">Sela-PASS (Siemens Building Technologies Solution Partner) • Khobar, Saudi Arabia</p>
@@ -101,7 +101,7 @@
       </ul>
     </div>
 
-    <div class="glass timeline-card">
+    <div class="neumorphic timeline-card">
       <span class="date">Aug 2023 – Dec 2023 (Part-Time)</span>
       <h4>Solar Engineer – PV Systems</h4>
       <p class="company">Al-Aggar Renewable Solar Solutions • Wad Madani, Sudan</p>
@@ -113,7 +113,7 @@
       </ul>
     </div>
 
-    <div class="glass timeline-card">
+    <div class="neumorphic timeline-card">
       <span class="date">Sep 2022 – Dec 2023</span>
       <h4>Automation Engineer</h4>
       <p class="company">DAL Group – DAL Agricultural Services Company • Khartoum, Sudan</p>
@@ -124,7 +124,7 @@
       </ul>
     </div>
 
-    <div class="glass timeline-card">
+    <div class="neumorphic timeline-card">
       <span class="date">Apr 2022 – Aug 2022</span>
       <h4>Product Support Engineer</h4>
       <p class="company">Afroscot Services Co. Ltd • Khartoum, Sudan</p>
@@ -134,6 +134,17 @@
         <li>Resolved 90% of field issues within 24 hours</li>
       </ul>
     </div>
+
+    <div class="neumorphic timeline-card">
+      <span class="date">Oct 2021 – Feb 2022</span>
+      <h4>Instrumentation Site Engineer</h4>
+      <p class="company">University of Khartoum Consultancy Corporation (UKCC) • Khartoum, Sudan</p>
+      <ul>
+        <li>Supported Fixed Asset Management System at Khartoum Refinery</li>
+        <li>Conducted instrumentation audits, improving asset data accuracy by 20%</li>
+        <li>Developed standardized reporting templates for asset tracking and analysis</li>
+      </ul>
+    </div>
   </div>
 </section>
 
@@ -141,17 +152,21 @@
 <section id="projects" class="section">
   <h3 class="section-title">Key Projects</h3>
   <div class="grid-3">
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>SEC Substations</h4>
       <p>HVAC & BMS DDC Panels – Design, Manufacturing, Testing & Commissioning</p>
     </div>
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>King Faisal Specialist Hospital, Medina</h4>
       <p>BMS System Testing & Commissioning</p>
     </div>
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>Off-Grid & Hybrid Solar Systems</h4>
       <p>11+ installations powering rural communities and infrastructure</p>
+    </div>
+    <div class="neumorphic card">
+      <h4>Industrial Automation</h4>
+      <p>Preventive & Shutdown Maintenance</p>
     </div>
   </div>
 </section>
@@ -160,21 +175,21 @@
 <section id="skills" class="section">
   <h3 class="section-title">Technical Skills</h3>
   <div class="skills-grid">
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>BMS & Automation</h4>
-      <p>Siemens Desigo CC, PXC, DXR, SID, HIT • KNX, BACnet, DALI-2, LoRaWAN, IoT</p>
+      <p>Siemens Desigo CC, PXC, DXR-1/2, SID, HIT • KNX, BACnet, DALI-2, LoRaWAN, IoT • PLC, HMI, SCADA</p>
     </div>
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>HVAC & Control Systems</h4>
-      <p>DDC & MCC Panel Design • Sensors, IEQ, VFD, PID Control</p>
+      <p>DDC & MCC Panel Design • Sensors, IEQ, VFD, PID</p>
     </div>
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>Solar & Energy Systems</h4>
-      <p>Off-grid & Hybrid PV • Battery Energy Storage (BESS) • Testing & Load Analysis</p>
+      <p>Off-grid & Hybrid PV Systems • Battery Energy Storage Systems (BESS) • Testing, Commissioning, Load Analysis</p>
     </div>
-    <div class="glass card">
+    <div class="neumorphic card">
       <h4>Software & Tools</h4>
-      <p>AutoCAD • MATLAB/Simulink • PVSyst • Microsoft Excel (Advanced)</p>
+      <p>AutoCAD • MATLAB/Simulink • PVSyst • Microsoft Excel (Advanced) • BOQs & Cost Estimation • Technical Proposals & Compliance Reports • Site Assessment & Solution Matching</p>
     </div>
   </div>
 </section>
@@ -182,10 +197,10 @@
 <!-- Education & Certifications -->
 <section id="education" class="section">
   <h3 class="section-title">Education & Certifications</h3>
-  <div class="glass section-card">
+  <div class="neumorphic section-card">
     <h4>B.Sc. Electrical & Electronics Engineering</h4>
-    <p>University of Khartoum, Sudan • Graduated Oct 2020</p>
-    <p><strong>Graduation Project:</strong> Extension of Photovoltaic Power Generation – Al-Fashir Power Plant (PVSyst & MATLAB/Simulink modeling)</p>
+    <p>University of Khartoum – Sudan • Oct 2020</p>
+    <p><strong>Graduation Project:</strong> Extension of Photovoltaic Power Generation – Al-Fashir Power Plant • Modeled maximum solar penetration using PVSyst & MATLAB/Simulink</p>
 
     <h4 style="margin-top: 30px;">Certifications & Training</h4>
     <ul>
@@ -198,11 +213,12 @@
 </section>
 
 <!-- Footer -->
-<footer id="contact" class="footer glass">
+<footer id="contact" class="footer neumorphic">
   <div class="footer-content">
     <p><strong>Languages:</strong> Arabic (Native) • English (Full Professional Proficiency)</p>
     <p><strong>Volunteer Experience:</strong> Social Media Director & Community Organizer – Insan Khair Initiative, Sudan</p>
     <p><strong>Interests:</strong> Swimming • Football • Arabic Calligraphy • Free-Hand Drawing</p>
+    <p><strong>Additional:</strong> References available upon request</p>
     <p style="margin-top: 20px;">© 2026 Eng. Mohammed Ali Abdallah Ahmed • All rights reserved</p>
     <p>mohammed.ali280@gmail.com | +966 532 586 897</p>
   </div>
