--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eng. Mohammed Ali Abdallah Ahmed | Automation Engineer</title>
 
+  <!-- SEO -->
+  <meta name="description" content="Electrical Automation Engineer specializing in BMS, HVAC, Smart Buildings, and Solar PV Systems in Saudi Arabia.">
+  <meta name="keywords" content="Automation Engineer, Siemens BMS, HVAC, Solar PV, KNX, BACnet, Saudi Arabia">
+  <meta name="author" content="Mohammed Ali Abdallah Ahmed">
+
   <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
@@ -13,7 +20,7 @@
 </head>
 <body>
 
-<!-- Animated Tech Background -->
+<!-- Background -->
 <div class="background">
   <svg class="tech-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
     <path d="M0 50 Q25 20 50 50 T100 50 M50 0 Q80 25 50 50 T50 100" stroke="var(--accent)" stroke-width="0.5" fill="none"/>
@@ -26,16 +33,15 @@
 <!-- Navbar -->
 <nav class="navbar">
   <div class="nav-container">
-    <div class="logo"><i class="fas fa-cogs"></i> M. Ali</div>
+    <h1 class="logo"><i class="fas fa-cogs"></i> M. Ali</h1>
     <ul class="nav-links">
-      <li><a href="#home" class="active"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
-      <li><a href="#experience"><i class="fas fa-briefcase"></i> Experience</a></li>
-      <li><a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
-      <li><a href="#skills"><i class="fas fa-tools"></i> Skills</a></li>
-      <li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
-      <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-      <li><a href="cv.pdf" class="btn primary" target="_blank"><i class="fas fa-download"></i> Download CV</a></li>
+      <li><a href="#home" class="active">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#contact" class="btn primary">Contact</a></li>
     </ul>
     <div class="hamburger"><span></span><span></span><span></span></div>
   </div>
@@ -44,32 +50,38 @@
 <!-- Hero -->
 <section id="home" class="hero">
   <div class="hero-content glass animate-fade-in">
-    <div class="hero-text">
-      <h1 class="animate-slide-up">Eng. Mohammed Ali<br><span>Abdallah Ahmed</span></h1>
-      <h2 class="animate-slide-up">Electrical Automation Engineer</h2>
-      <p class="tagline animate-slide-up">Specializing in BMS, HVAC, Smart Buildings, and Solar PV Systems. Delivering innovative, energy-efficient solutions for modern infrastructure.</p>
+    <div>
+      <h1>Eng. Mohammed Ali<br><span>Abdallah Ahmed</span></h1>
+      <h2>Electrical Automation Engineer</h2>
+      <p class="tagline">
+        BMS • HVAC • Smart Buildings • Solar PV Systems  
+        Delivering efficient and intelligent engineering solutions.
+      </p>
 
-      <div class="contact-info animate-slide-up">
-        <p><i class="fas fa-map-marker-alt icon-spin"></i> Olaya, Khobar, Eastern Province, Saudi Arabia</p>
-        <p><i class="fas fa-phone icon-spin"></i> +966 532 586 897</p>
-        <p><i class="fas fa-envelope icon-spin"></i> mohammed.ali280@gmail.com</p>
-        <p><i class="fab fa-linkedin icon-spin"></i>
-          <a href="https://www.linkedin.com/in/mohammed-ahmed-13328219a" target="_blank">linkedin.com/in/mohammed-ahmed-13328219a</a>
+      <div class="contact-info">
+        <p><i class="fas fa-map-marker-alt"></i> Khobar, Saudi Arabia</p>
+        <p><i class="fas fa-phone"></i> +966 532 586 897</p>
+        <p><i class="fas fa-envelope"></i> mohammed.ali280@gmail.com</p>
+        <p><i class="fab fa-linkedin"></i>
+          <a target="_blank" href="https://www.linkedin.com/in/mohammed-ahmed-13328219a">
+            LinkedIn Profile
+          </a>
         </p>
       </div>
 
-      <div class="buttons animate-slide-up">
-        <a href="#contact" class="btn primary pulse">Get in Touch</a>
-        <a href="cv.pdf" target="_blank" class="btn outline pulse">Download CV</a>
+      <div class="buttons">
+        <a href="#contact" class="btn primary">Get in Touch</a>
+        <a href="cv.pdf" class="btn outline" target="_blank">Download CV</a>
       </div>
 
-      <div class="availability animate-slide-up">
-        <i class="fas fa-check-circle icon-spin"></i> Transferable Iqama – Available for Immediate Relocation
+      <div class="availability">
+        <i class="fas fa-check-circle"></i>
+        Transferable Iqama – Immediate Availability
       </div>
     </div>
 
-    <div class="hero-image animate-fade-in">
-      <div class="avatar"><i class="fas fa-robot icon-bounce"></i></div>
+    <div class="avatar">
+      <i class="fas fa-robot"></i>
     </div>
   </div>
 </section>
@@ -79,9 +91,11 @@
   <div class="glass section-card">
     <h3>Professional Summary</h3>
     <p>
-      A results-driven Electrical Automation Engineer with over 4 years of hands-on experience in Siemens Building Automation Solutions, HVAC DDC control systems, intelligent lighting control, and solar PV energy systems. 
-      My expertise encompasses presales engineering, system design, BOQ preparation, cost estimation, and technical documentation. I have a proven track record of delivering optimized, compliant solutions for the Saudi Electricity Company (SEC) and leading contractors, resulting in up to 15% cost reductions and 95% client satisfaction rates. 
-      Passionate about integrating cutting-edge IoT and automation technologies to enhance energy efficiency and system reliability in smart buildings and renewable energy projects.
+      Results-driven Electrical Automation Engineer with 4+ years of experience
+      in Siemens Building Automation, HVAC control systems, smart lighting,
+      and solar PV solutions. Strong background in presales engineering,
+      BOQs, cost optimization, and system integration for mission-critical
+      facilities.
     </p>
   </div>
 </section>
@@ -89,65 +103,29 @@
 <!-- Experience -->
 <section id="experience" class="section animate-section">
   <h3 class="section-title">Professional Experience</h3>
-
   <div class="timeline">
-    <div class="glass timeline-card animate-slide-left">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Mar 2024 – Present</span>
-      <h4><i class="fas fa-cog"></i> Controls Engineer – Building Automation Design & Presales</h4>
-      <p class="company">Sela-PASS (Siemens Building Technologies Solution Partner) • Khobar, Saudi Arabia</p>
+
+    <div class="glass timeline-card">
+      <span class="date">Mar 2024 – Present</span>
+      <h4>Controls Engineer – BMS & Presales</h4>
+      <p class="company">Sela-PASS (Siemens Partner) – Saudi Arabia</p>
       <ul>
-        <li>Designed and delivered Siemens-based DDC panels for SEC substation HVAC and BMS systems, ensuring seamless integration and optimal performance.</li>
-        <li>Led presales activities, including technical proposals, AutoCAD layouts, BOQs, and cost estimation, contributing to successful project acquisitions.</li>
-        <li>Configured PXC & DXR controllers, SID/HIT tools, and IEQ sensors to optimize energy efficiency, reducing operational costs.</li>
-        <li>Integrated KNX, BACnet, and DALI-2 systems for smart lighting and building automation, enhancing system interoperability.</li>
-        <li>Supported commissioning, performance tuning, and post-handover support, achieving 95% customer satisfaction through proactive issue resolution.</li>
+        <li>Designed Siemens DDC panels for SEC substations</li>
+        <li>Prepared BOQs, layouts, and cost estimations</li>
+        <li>Integrated KNX, BACnet, DALI-2 systems</li>
       </ul>
     </div>
 
-    <div class="glass timeline-card animate-slide-left">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Aug 2023 – Dec 2023 (Part-Time)</span>
-      <h4><i class="fas fa-solar-panel"></i> Solar Engineer – PV Systems</h4>
-      <p class="company">Al-Aggar Renewable Solar Solutions • Wad Madani, Sudan</p>
+    <div class="glass timeline-card">
+      <span class="date">Aug 2023 – Dec 2023</span>
+      <h4>Solar Engineer</h4>
+      <p class="company">Al-Aggar Renewable Solutions – Sudan</p>
       <ul>
-        <li>Designed and installed over 10 off-grid and hybrid solar PV systems, powering rural homes and water stations in underserved areas.</li>
-        <li>Improved system availability and reduced downtime by 10% through advanced performance optimization techniques.</li>
-        <li>Prepared comprehensive technical proposals, cost estimates, and IEC-compliant designs, ensuring regulatory adherence.</li>
-        <li>Conducted detailed site surveys and coordinated installations with field teams for efficient project execution.</li>
+        <li>Designed off-grid & hybrid PV systems</li>
+        <li>Improved system availability by 10%</li>
       </ul>
     </div>
 
-    <div class="glass timeline-card animate-slide-left">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Sep 2022 – Dec 2023</span>
-      <h4><i class="fas fa-industry"></i> Automation Engineer</h4>
-      <p class="company">DAL Group – DAL Agricultural Services Company • Khartoum, Sudan</p>
-      <ul>
-        <li>Maintained Hunter Wood Technologies automated production lines, reducing downtime by 15% via targeted maintenance strategies.</li>
-        <li>Supported PLC, HMI, MCC, and instrumentation systems, ensuring continuous operational efficiency.</li>
-        <li>Implemented predictive maintenance, sensor calibration, and root-cause analysis to improve Overall Equipment Effectiveness (OEE).</li>
-      </ul>
-    </div>
-
-    <div class="glass timeline-card animate-slide-left">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Apr 2022 – Aug 2022</span>
-      <h4><i class="fas fa-tools"></i> Product Support Engineer</h4>
-      <p class="company">Afroscot Services Co. Ltd • Khartoum, Sudan</p>
-      <ul>
-        <li>Commissioned diesel generators and hybrid solar systems for over 15 telecom sites, ensuring reliable power supply.</li>
-        <li>Rehabilitated legacy systems to 76% operational capacity through systematic upgrades and repairs.</li>
-        <li>Resolved 90% of field issues within 24 hours, minimizing service disruptions.</li>
-      </ul>
-    </div>
-
-    <div class="glass timeline-card animate-slide-left">
-      <span class="date"><i class="fas fa-calendar-alt"></i> Oct 2021 – Feb 2022</span>
-      <h4><i class="fas fa-chart-line"></i> Instrumentation Site Engineer</h4>
-      <p class="company">University of Khartoum Consultancy Corporation (UKCC) • Khartoum, Sudan</p>
-      <ul>
-        <li>Supported Fixed Asset Management System at Khartoum Refinery, enhancing asset tracking capabilities.</li>
-        <li>Conducted instrumentation audits, improving asset data accuracy by 20%.</li>
-        <li>Developed standardized reporting templates for asset tracking and analysis, streamlining operations.</li>
-      </ul>
-    </div>
   </div>
 </section>
 
@@ -155,26 +133,9 @@
 <section id="projects" class="section animate-section">
   <h3 class="section-title">Key Projects</h3>
   <div class="grid-3">
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-bolt icon-spin"></i>
-      <h4>SEC Substations</h4>
-      <p>HVAC & BMS DDC Panels – Comprehensive design, manufacturing, testing, and commissioning for energy-efficient substation systems.</p>
-    </div>
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-hospital"></i>
-      <h4>King Faisal Specialist Hospital, Medina</h4>
-      <p>BMS System Testing & Commissioning – Ensured reliable building management for critical healthcare infrastructure.</p>
-    </div>
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-sun"></i>
-      <h4>Off-Grid & Hybrid Solar Systems</h4>
-      <p>Over 11 installations powering rural communities, water stations, and infrastructure with sustainable energy solutions.</p>
-    </div>
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-gears"></i>
-      <h4>Industrial Automation</h4>
-      <p>Preventive & Shutdown Maintenance – Optimized production lines for minimal downtime and maximum efficiency.</p>
-    </div>
+    <div class="glass card">SEC Substation BMS</div>
+    <div class="glass card">King Faisal Hospital – BMS</div>
+    <div class="glass card">Off-Grid Solar Systems</div>
   </div>
 </section>
 
@@ -182,60 +143,27 @@
 <section id="skills" class="section animate-section">
   <h3 class="section-title">Technical Skills</h3>
   <div class="skills-grid">
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-building"></i>
-      <h4>BMS & Automation</h4>
-      <p>Siemens Desigo CC, PXC, DXR-1/2, SID, HIT • KNX, BACnet, DALI-2, LoRaWAN, IoT • PLC, HMI, SCADA</p>
-    </div>
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-fan"></i>
-      <h4>HVAC & Control Systems</h4>
-      <p>DDC & MCC Panel Design • Sensors, IEQ, VFD, PID • Instrumentation and Control Optimization</p>
-    </div>
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-solar-panel"></i>
-      <h4>Solar & Energy Systems</h4>
-      <p>Off-grid & Hybrid PV Systems • Battery Energy Storage Systems (BESS) • Testing, Commissioning, Load Analysis • Renewable Energy Integration</p>
-    </div>
-    <div class="glass card animate-zoom-in">
-      <i class="fas fa-laptop-code"></i>
-      <h4>Software & Tools</h4>
-      <p>AutoCAD • MATLAB/Simulink • PVSyst • Microsoft Excel (Advanced) • BOQs & Cost Estimation • Technical Proposals & Compliance Reports • Site Assessment & Solution Matching • Presales & Coordination</p>
-    </div>
+    <div class="glass card">Siemens BMS • KNX • BACnet</div>
+    <div class="glass card">HVAC DDC • VFD • Sensors</div>
+    <div class="glass card">Solar PV • BESS • PVSyst</div>
+    <div class="glass card">AutoCAD • MATLAB • BOQs</div>
   </div>
 </section>
 
-<!-- Education & Certifications -->
+<!-- Education -->
 <section id="education" class="section animate-section">
-  <h3 class="section-title">Education & Certifications</h3>
   <div class="glass section-card">
-    <i class="fas fa-university"></i>
-    <h4>B.Sc. Electrical & Electronics Engineering</h4>
-    <p>University of Khartoum – Sudan • Graduated Oct 2020</p>
-    <p><strong>Graduation Project:</strong> Extension of Photovoltaic Power Generation – Al-Fashir Power Plant. Modeled maximum solar penetration using PVSyst & MATLAB/Simulink, demonstrating practical application of renewable energy principles.</p>
-
-    <h4 style="margin-top: 30px;"><i class="fas fa-certificate"></i> Certifications & Training</h4>
-    <ul>
-      <li>Siemens Intelligent Smart Building Solutions (KNX, BACnet, IoT, DALI-2) – 2025</li>
-      <li>Siemens Presales Training – Desigo PXC/DXR – Jan 2025</li>
-      <li>Solar PV Design & Installation – edX (Dr. Olindo Isabella)</li>
-      <li>Advanced Industrial Automation – PLC, SCADA, VFD</li>
-    </ul>
+    <h3>Education</h3>
+    <p>B.Sc. Electrical & Electronics Engineering – University of Khartoum</p>
   </div>
 </section>
 
 <!-- Footer -->
 <footer id="contact" class="footer glass">
-  <div class="footer-content">
-    <p><strong><i class="fas fa-language"></i> Languages:</strong> Arabic (Native) • English (Full Professional Proficiency)</p>
-    <p><strong><i class="fas fa-hands-helping"></i> Volunteer Experience:</strong> Social Media Director & Community Organizer – Insan Khair Initiative, Sudan. Organized community events and managed social media campaigns to promote social welfare.</p>
-    <p><strong><i class="fas fa-heart"></i> Interests:</strong> Swimming • Football • Arabic Calligraphy • Free-Hand Drawing</p>
-    <p><strong><i class="fas fa-info-circle"></i> Additional:</strong> References available upon request. Committed to continuous learning and innovation in automation and renewable technologies.</p>
-    <p style="margin-top: 20px;">© 2026 Eng. Mohammed Ali Abdallah Ahmed • All rights reserved</p>
-    <p>mohammed.ali280@gmail.com | +966 532 586 897</p>
-  </div>
+  <p>© 2026 Eng. Mohammed Ali Abdallah Ahmed</p>
+  <p>Email: mohammed.ali280@gmail.com | Phone: +966 532 586 897</p>
 </footer>
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
